<resources>
    <string name="app_name">Museum</string>

    <string name="mf_start_btn_msg">Let\'s go</string>
    <string name="mf_map_btn_msg">Open map</string>
    <string name="powered_by_msg" translatable="false">by KonstantIMP, witelokk</string>

    <string name="mf_choose_floor_msg">Choose the floor</string>
    <string name="qv_skip_question_btn">Skip this question</string>
    <string name="qv_check_answer_btn">Check the answer</string>
    <string name="qv_scan_qr_btn">Scan QR code</string>
    <string name="qv_enter_answer_et">Enter your answer</string>
    <string name="qv_enter_number_et">Enter number</string>
    <string name="qv_question_number_msg">Question\'s number:</string>

    <string name="rf_done_msg">Well done!</string>
    <string name="rf_solved_msg">Number of solved:</string>
    <string name="rf_skipped_msg">Number of skipped:</string>
    <string name="rf_back_btn">Back to menu</string>

    <string name="snack_correct">Yes! It is correct</string>
    <string name="snack_error">Ops... Try again</string>
</resources>
