<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mf_start_btn"
        android:orientation="vertical" >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/mf_app_logo_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_app_logo"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="@dimen/doub_grid_size"
            android:gravity="center"
            android:textStyle="italic"
            android:textSize="24sp"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mf_start_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_grid_size"
        app:layout_constraintBottom_toTopOf="@id/mf_map_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/mf_start_btn_msg"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mf_map_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/doub_grid_size"
        app:layout_constraintBottom_toTopOf="@id/mf_powered_by_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/mf_map_btn_msg"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mf_powered_by_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/powered_by_msg"
        android:gravity="center"
        android:textSize="12sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>