<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/card_corner_size"
    style="@style/Widget.Material3.CardView.Elevated">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/doub_grid_size">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="@dimen/card_corner_size"
            style="@style/Widget.Material3.CardView.Filled">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/doub_grid_size"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_marginStart="@dimen/base_grid_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:text="@string/qv_question_number_msg"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/qv_number_msg"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:gravity="end"
                        android:layout_marginEnd="@dimen/base_grid_size"/>

                </LinearLayout>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/qv_question_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/base_grid_size"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Image"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/qv_question_text_msg"
                    android:layout_marginTop="@dimen/base_grid_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="@dimen/card_corner_size"
            style="@style/Widget.Material3.CardView.Filled">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/doub_grid_size"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/qv_scan_qr_btn"
                    android:text="@string/qv_scan_qr_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_baseline_qr_code_scanner_24"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/qv_text_answer_il"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusBottomEnd="@dimen/doub_grid_size"
                    app:boxCornerRadiusBottomStart="@dimen/doub_grid_size"
                    app:boxCornerRadiusTopEnd="@dimen/doub_grid_size"
                    app:boxCornerRadiusTopStart="@dimen/doub_grid_size"
                    style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/qv_text_answer_it"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textAutoCorrect"
                        android:hint="@string/qv_enter_answer_et"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/qv_number_answer_il"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusBottomEnd="@dimen/doub_grid_size"
                    app:boxCornerRadiusBottomStart="@dimen/doub_grid_size"
                    app:boxCornerRadiusTopEnd="@dimen/doub_grid_size"
                    app:boxCornerRadiusTopStart="@dimen/doub_grid_size"
                    style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/qv_number_answer_it"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal"
                        android:hint="@string/qv_enter_number_et"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/qv_check_btn"
                    android:layout_marginTop="@dimen/base_grid_size"
                    android:text="@string/qv_check_answer_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_baseline_check_24"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/qv_skip_btn"
                    android:text="@string/qv_skip_question_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_baseline_skip_next_24"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>